--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -60,8 +60,8 @@ jobs:
         rm -f Secret.txt
     - name: Commit #Upload a new refresh_token to the repository
       run: |
-        git config --global user.email bolten.kristina@hotmail.com
-        git config --global user.name Bolten
+        git config --global user.email joao.segatti@hotmail.com
+        git config --global user.name Qjao
         git add .
         git commit -m "Update new refresh token with MSO_E5_Dev_AutoRenew_REVISION_2" -a
     - name: Push changes
